added 3 recipe links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <a href="sweet-potato-pie.html">Sweet Potato Pie Recipe</a>
+
+    <a href="sweet-potato-casserole.html">Sweet Potato Casserole Recipe</a>
+
+    <a href="turkey-soup.html">Turkey Soup Recipe</a>
 </body>
 </html>
