unordered listed the recipes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="sweet-potato-pie.html">Sweet Potato Pie Recipe</a>
+    <ul>
+        <li><a href="sweet-potato-pie.html">Sweet Potato Pie Recipe</a></li>
 
-    <a href="sweet-potato-casserole.html">Sweet Potato Casserole Recipe</a>
+        <li><a href="sweet-potato-casserole.html">Sweet Potato Casserole Recipe</a></li>
 
-    <a href="turkey-soup.html">Turkey Soup Recipe</a>
+        <li><a href="turkey-soup.html">Turkey Soup Recipe</a></li>
+    </ul>
 </body>
 </html>
