--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="sweet-potato-pie.html">Sweet Potato Pie Recipe</a></li>
+        <li><a href="./recipes/sweet-potato-pie.html">Sweet Potato Pie Recipe</a></li>
 
-        <li><a href="sweet-potato-casserole.html">Sweet Potato Casserole Recipe</a></li>
+        <li><a href="./recipes/sweet-potato-casserole.html">Sweet Potato Casserole Recipe</a></li>
 
-        <li><a href="turkey-soup.html">Turkey Soup Recipe</a></li>
+        <li><a href="./recipes/turkey-soup.html">Turkey Soup Recipe</a></li>
     </ul>
 </body>
 </html>
