--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Sweet Potato Pie Recipe</h1>
+    <img src="../img/sweetpotatopie.jpeg" alt="Sweet Potato Pie">
+    <h3>Sweet Potato Pie</h3>
+    <p> Thie recipe was shared with me by a special friend in Atlanta, GA. 
+        It has long been a favorite, <br> and everyone who tastes it says 
+        it is the best they have ever had. </p>
 </body>
 </html>
