--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -13,5 +13,21 @@
     <p> Thie recipe was shared with me by a special friend in Atlanta, GA. 
         It has long been a favorite, <br> and everyone who tastes it says 
         it is the best they have ever had. </p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>1 sweet potato</li>
+        <li>half cup butter, softened</li>
+        <li>1 cup white sugar</li>
+        <li>half cup milk</li>
+        <li>2 eggs</li>
+        <li>half teaspoon ground nutmeg</li>
+        <li>half teaspoon ground cinnamon</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 (9 inch) unbaked pie crust</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        
+    </ol>
 </body>
 </html>
