added header and ordered list for directions

--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -25,9 +25,19 @@
         <li>1 teaspoon vanilla extract</li>
         <li>1 (9 inch) unbaked pie crust</li>
     </ul>
-    <h4>Steps</h4>
+    <h4>Directions</h4>
     <ol>
-        
+        <li>Boil sweet potato whole in skin for 40 to 50 minutes,
+             or until done.<br> Run cold water over the sweet potato, 
+             and remove the skin.</li> <br>
+   
+        <li>Break apart sweet potato in a bowl. Add butter, and mix well with mixer. <br>
+             Stir in sugar, milk, eggs, nutmeg, cinnamon and vanilla. Beat on medium <br>
+             speed until mixture is smooth. Pour filling into an unbaked pie crust.</li> <br>
+    
+        <li>Bake at 350 degrees F (175 degrees C) for 55 to 60 minutes, or until <br>
+            knife inserted in center comes out clean. Pie will puff up like a 
+            souffle, <br>and then will sink down as it cools.</li>
     </ol>
 </body>
 </html>
