added ingredients unordered list

--- a/recipes/sweet-potato-casserole.html
+++ b/recipes/sweet-potato-casserole.html
@@ -11,6 +11,14 @@
     <img src="../img/sweetpotatocasserole.jpeg" alt="Sweet Potato Casserole">
     <h3>Sweet Potato Casserole</h3>
     <p>Sweet potatoes topped with creamy toasted marshmallows.</p>
-    
+    <h4>Ingredients</h4>
+    <ul>
+        <li>5 sweet potatoes, sliced</li>
+        <li>quarter cup reduced fat margarine</li>
+        <li>half cup packed brown sugar</li>
+        <li>3 tablespoons orange juice</li>
+        <li>1 pinch ground cinnamon</li>
+        <li>1 (10.5 ounce) package miniature marshmellows</li>
+    </ul>
 </body>
 </html>
