added header and ordered list for directions

--- a/recipes/sweet-potato-casserole.html
+++ b/recipes/sweet-potato-casserole.html
@@ -20,5 +20,18 @@
         <li>1 pinch ground cinnamon</li>
         <li>1 (10.5 ounce) package miniature marshmellows</li>
     </ul>
+    <h4>Directions</h4>
+    <ol>
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li><br>
+        <li>Place sweet potatoes in a large saucepan with enough water
+             to cover.<br> Bring to a boil, and cook until tender, about 15 
+             minutes. Remove from <br>heat, drain, and mash.</li> <br>
+        <li>Place mashed sweet potatoes in large bowl, and use an electric 
+            mixer<br> to blend with the margarine, brown sugar, orange juice, 
+            and cinnamon. <br>Spread evenly into a 9x13 inch baking dish. Top
+             with miniature marshmallows.</li> <br>
+        <li>Bake for 25 to 30 minutes in the preheated oven, or until heated<br>
+             through, and marshmallows are puffed and golden brown.</li>
+    </ol>
 </body>
 </html>
