--- a/recipes/turkey-soup.html
+++ b/recipes/turkey-soup.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Turkey Soup Recipe</h1>
+    <img src="../img/turkeysoup.jpeg" alt="Turkey Soup">
+    <h3>Turkey Soup</h3>
+    <p>Thie is a family favorite and nobody knows how easy it is to make!
+         I love that it's gluten-free! </p>
 </body>
 </html>
