--- a/recipes/turkey-soup.html
+++ b/recipes/turkey-soup.html
@@ -12,5 +12,18 @@
     <h3>Turkey Soup</h3>
     <p>Thie is a family favorite and nobody knows how easy it is to make!
          I love that it's gluten-free! </p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>2 cups diced cooked turkey</li>
+        <li>1 onion, diced</li>
+        <li>2 carrots, diced</li>
+        <li>1 potato, peeled and diced</li>
+        <li>quarter cup chopped celery</li>
+        <li>2 tablespoons chopped fresh parley</li>
+        <li>1 clove garlic, minced</li>
+        <li>half teaspoon salt</li>
+        <li>half teaspoon ground black pepper</li>
+        <li>6 cups turkey stock</li>
+    </ul>
 </body>
 </html>
