added directions list

--- a/recipes/turkey-soup.html
+++ b/recipes/turkey-soup.html
@@ -25,5 +25,12 @@
         <li>half teaspoon ground black pepper</li>
         <li>6 cups turkey stock</li>
     </ul>
+    <h4>Directions</h4>
+    <ol>
+        <li>Combine turkey, onion, carrots, potato, celery, parsley, garlic,
+             salt, and black pepper<br> in a large stockpot; add turkey stock. 
+             Bring stock to a boil, reduce heat to medium-low,<br> and simmer 
+             until vegetables are tender, 2 to 3 hours.</li>
+    </ol>
 </body>
 </html>
