added homepage link

--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -39,5 +39,8 @@
             knife inserted in center comes out clean. Pie will puff up like a 
             souffle, <br>and then will sink down as it cools.</li>
     </ol>
+
+<a href="../index.html">Back to homepage</a>
+
 </body>
 </html>
