--- a/recipes/sweet-potato-casserole.html
+++ b/recipes/sweet-potato-casserole.html
@@ -33,5 +33,8 @@
         <li>Bake for 25 to 30 minutes in the preheated oven, or until heated<br>
              through, and marshmallows are puffed and golden brown.</li>
     </ol>
+
+    <a href="../index.html">Back to homepage</a>
+    
 </body>
 </html>
