fixed grammar errors

--- a/recipes/turkey-soup.html
+++ b/recipes/turkey-soup.html
@@ -10,7 +10,7 @@
     <h1>Turkey Soup Recipe</h1>
     <img src="../img/turkeysoup.jpeg" alt="Turkey Soup">
     <h3>Turkey Soup</h3>
-    <p>Thie is a family favorite and nobody knows how easy it is to make!
+    <p>This is a family favorite and nobody knows how easy it is to make!
          I love that it's gluten-free! </p>
     <h4>Ingredients</h4>
     <ul>
@@ -18,11 +18,11 @@
         <li>1 onion, diced</li>
         <li>2 carrots, diced</li>
         <li>1 potato, peeled and diced</li>
-        <li>quarter cup chopped celery</li>
+        <li>Quarter cup chopped celery</li>
         <li>2 tablespoons chopped fresh parley</li>
         <li>1 clove garlic, minced</li>
-        <li>half teaspoon salt</li>
-        <li>half teaspoon ground black pepper</li>
+        <li>Half teaspoon salt</li>
+        <li>Half teaspoon ground black pepper</li>
         <li>6 cups turkey stock</li>
     </ul>
     <h4>Directions</h4>
@@ -34,6 +34,6 @@
     </ol>
 
     <a href="../index.html">Back to homepage</a>
-    
+
 </body>
 </html>
