fixed grammar errors

--- a/recipes/sweet-potato-casserole.html
+++ b/recipes/sweet-potato-casserole.html
@@ -14,8 +14,8 @@
     <h4>Ingredients</h4>
     <ul>
         <li>5 sweet potatoes, sliced</li>
-        <li>quarter cup reduced fat margarine</li>
-        <li>half cup packed brown sugar</li>
+        <li>Quarter cup reduced fat margarine</li>
+        <li>Half cup packed brown sugar</li>
         <li>3 tablespoons orange juice</li>
         <li>1 pinch ground cinnamon</li>
         <li>1 (10.5 ounce) package miniature marshmellows</li>
@@ -35,6 +35,6 @@
     </ol>
 
     <a href="../index.html">Back to homepage</a>
-    
+
 </body>
 </html>
