--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="title">Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/sweet-potato-pie.html">Sweet Potato Pie Recipe</a></li>
 
