center aligned title, recipe list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="title">Odin Recipes</h1>
-    <ul>
+    <ul class="center">
         <li><a href="./recipes/sweet-potato-pie.html">Sweet Potato Pie Recipe</a></li>
 
         <li><a href="./recipes/sweet-potato-casserole.html">Sweet Potato Casserole Recipe</a></li>
