added class=img for css

--- a/recipes/turkey-soup.html
+++ b/recipes/turkey-soup.html
@@ -7,9 +7,9 @@
     <title>Turkey Soup Recipe</title>
     <link rel="stylesheet" href="soupstyles.css">
 </head>
-<body>
+<body class="center">
     <h1 id="maintitle">Turkey Soup Recipe</h1>
-    <img src="../img/turkeysoup.jpeg" alt="Turkey Soup">
+    <img class="img" src="../img/turkeysoup.jpeg" alt="Turkey Soup">
     <h3 class="titleone">Turkey Soup</h3>
     <p>This is a family favorite and nobody knows how easy it is to make!
          I love that it's gluten-free! </p>
