added class bod to body

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bod">
     <h1 id="title">Odin Recipes</h1>
     <ul class="center">
         <li><a href="./recipes/sweet-potato-pie.html">Sweet Potato Pie Recipe</a></li>
