added ccs link, added body class center, added h1 id maintitle, added h3 class titleone, added h4 class titletwo/three

--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet Potato Pie Recipe</title>
+    <link rel="stylesheet" href="piestyles.css">
 </head>
-<body>
-    <h1>Sweet Potato Pie Recipe</h1>
-    <img src="../img/sweetpotatopie.jpeg" alt="Sweet Potato Pie">
-    <h3>Sweet Potato Pie</h3>
+<body class="center">
+    <h1 id="maintitle">Sweet Potato Pie Recipe</h1>
+    <img class="img" src="../img/sweetpotatopie.jpeg" alt="Sweet Potato Pie">
+    <h3 class="titleone">Sweet Potato Pie</h3>
     <p> This recipe was shared with me by a special friend in Atlanta, GA. 
         It has long been a favorite, <br> and everyone who tastes it says 
         it is the best they have ever had. </p>
-    <h4>Ingredients</h4>
+    <h4 class="titletwo">Ingredients</h4>
     <ul>
         <li>1 sweet potato</li>
         <li>Half cup butter, softened</li>
@@ -25,7 +26,7 @@
         <li>1 teaspoon vanilla extract</li>
         <li>1 (9 inch) unbaked pie crust</li>
     </ul>
-    <h4>Directions</h4>
+    <h4 class="titlethree">Directions</h4>
     <ol>
         <li>Boil sweet potato whole in skin for 40 to 50 minutes,
              or until done.<br> Run cold water over the sweet potato, 
