added css link, added body class center, added img class img, added titleone/two/three to sweet potato casserole, ingredients, directions

--- a/recipes/sweet-potato-casserole.html
+++ b/recipes/sweet-potato-casserole.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet Potato Casserole Recipe</title>
+    <link rel="stylesheet" href="casserolestyles.css">
 </head>
-<body>
-    <h1>Sweet Potato Casserole Recipe</h1>
-    <img src="../img/sweetpotatocasserole.jpeg" alt="Sweet Potato Casserole">
-    <h3>Sweet Potato Casserole</h3>
+<body class="center">
+    <h1 id="maintitle">Sweet Potato Casserole Recipe</h1>
+    <img class="img" src="../img/sweetpotatocasserole.jpeg" alt="Sweet Potato Casserole">
+    <h3 class="titleone">Sweet Potato Casserole</h3>
     <p>Sweet potatoes topped with creamy toasted marshmallows.</p>
-    <h4>Ingredients</h4>
+    <h4 class="titletwo">Ingredients</h4>
     <ul>
         <li>5 sweet potatoes, sliced</li>
         <li>Quarter cup reduced fat margarine</li>
@@ -20,7 +21,7 @@
         <li>1 pinch ground cinnamon</li>
         <li>1 (10.5 ounce) package miniature marshmellows</li>
     </ul>
-    <h4>Directions</h4>
+    <h4 class="titlethree">Directions</h4>
     <ol>
         <li>Preheat oven to 350 degrees F (175 degrees C).</li><br>
         <li>Place sweet potatoes in a large saucepan with enough water
